WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311086
[GTK][WPE] Fix GL state restoration bugs in BitmapTexture
https://bugs.webkit.org/show_bug.cgi?id=311086
Summary
[GTK][WPE] Fix GL state restoration bugs in BitmapTexture
Nikolas Zimmermann
Reported
2026-03-30 03:10:25 PDT
GL state restoration bugs cause side-effects - eventually leading to drawing glitches when the scroller thread paints a scrollbar and Atlas textures are used. Reproducability is hardware dependant.
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2026-03-30 04:38:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61681
EWS
Comment 2
2026-03-30 06:22:07 PDT
Committed
310220@main
(fd8dfbafeb2e): <
https://commits.webkit.org/310220@main
> Reviewed commits have been landed. Closing PR #61681 and removing active labels.
Fujii Hironori
Comment 3
2026-03-30 06:35:22 PDT
***
Bug 310346
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug